--- a/WatchEntrades.ipynb
+++ b/WatchEntrades.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,14 +79,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "def sendMail():\n",
     "    # Define email sender and receiver\n",
     "    email_sender = 'nbetsofficial@gmail.com'\n",
-    "    email_password = \"X\"\n",
+    "    email_password = \"ikpqyoirttgcphfp\"\n",
     "    email_receiver = ['Garridocho@gmail.com', 'aliahsan365@gmail.com', 'batrolonews@gmail.com']\n",
     "    \n",
     "    # Set the subject and body of the email\n",
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,14 +137,12 @@
     "    options = webdriver.ChromeOptions()\n",
     "    driver = webdriver.Chrome(ChromeDriverManager().install(), chrome_options=options)\n",
     "\n",
-    "    title = driver.title\n",
-    "    \n",
     "    return driver"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,9 +150,8 @@
     "    isTicketsBarcelonaAvailable = False\n",
     "\n",
     "    driver.get(URL)\n",
-    "    \n",
-    "    time_delay = randint(4,6)\n",
-    "    time.sleep(time_delay)\n",
+    "\n",
+    "    time.sleep(5)\n",
     "\n",
     "    ###############################\n",
     "    ## MAIN PAGE \n",
@@ -162,6 +159,8 @@
     "\n",
     "    link = ''\n",
     "    while True:\n",
+    "        time.sleep(1*10)\n",
+    "        \n",
     "        link1 = driver.find_elements(\"xpath\",\"//div[@class='swiper-slide swiper-slide-active slide-0']\")\n",
     "        link2 = driver.find_elements(\"xpath\",\"//div[@class='swiper-slide swiper-slide-active slide-1']\")\n",
     "    \n",
@@ -181,18 +180,65 @@
     "                print(\"ENTRADES A LA VENTAAAA!\")\n",
     "                sendMail()\n",
     "                return True\n",
-    "            \n",
-    "        time_delay = randint(4,6)\n",
-    "        time.sleep(time_delay*10)\n",
+    "\n",
+    "        time.sleep(5*10)\n",
+    "        \n",
+    "        driver.refresh()\n",
     "\n",
     "    return isTicketsBarcelonaAvailable"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[WDM] - ====== WebDriver manager ======\n",
+      "[WDM] - Current google-chrome version is 109.0.5414\n",
+      "[WDM] - Get LATEST chromedriver version for 109.0.5414 google-chrome\n",
+      "[WDM] - Driver [C:\\Users\\Garri\\.wdm\\drivers\\chromedriver\\win32\\109.0.5414.74\\chromedriver.exe] found in cache\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PRIMERA DIVISIÓN\n",
+      "12/02/2023 - POR CONFIRMAR\n",
+      "VILLARREAL\n",
+      "BARCELONA\n",
+      "PRÓXIMAMENTE\n",
+      "PRIMERA DIVISIÓN\n",
+      "12/02/2023 - POR CONFIRMAR\n",
+      "VILLARREAL\n",
+      "BARCELONA\n",
+      "PRÓXIMAMENTE\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-9-39f31efd6f66>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mdriver\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mOpenWindow\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mURL\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m \u001b[0mdata\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mWatchTickets\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdriver\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-8-b7e8f1d935c4>\u001b[0m in \u001b[0;36mWatchTickets\u001b[1;34m(driver)\u001b[0m\n\u001b[0;32m     34\u001b[0m                 \u001b[1;32mreturn\u001b[0m \u001b[1;32mTrue\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     35\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 36\u001b[1;33m         \u001b[0mtime\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msleep\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m5\u001b[0m\u001b[1;33m*\u001b[0m\u001b[1;36m10\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     37\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     38\u001b[0m         \u001b[0mdriver\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrefresh\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "URL = \"https://villarrealcf.es/venta-de-entradas/\" \n",
     "\n",
