--- a/Atrapar porcentajes quiniela.ipynb
+++ b/Atrapar porcentajes quiniela.ipynb
@@ -9,9 +9,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4.15.2\n"
+     ]
+    }
+   ],
    "source": [
     "import bs4 as bs\n",
     "import urllib\n",
@@ -36,34 +44,112 @@
     "from selenium import webdriver\n",
     "from selenium.webdriver.common.action_chains import ActionChains\n",
     "from selenium.webdriver.support.ui import Select\n",
-    "from webdriver_manager.chrome import ChromeDriverManager"
+    "#from webdriver_manager.chrome import ChromeDriverManager\n",
+    "from selenium.webdriver.chrome.service import Service as ChromeService\n",
+    "\n",
+    "print (webdriver.__version__)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'ChromeService' is not defined",
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<selenium.webdriver.chrome.webdriver.WebDriver (session=\"43d6dcb6b95649ea81b86d77ce9fe837\")>\n",
+      "R.SOCIEDAD\n",
+      "GIRONA\n",
+      "Empty DataFrame\n",
+      "Columns: [Season, Jornada, Line, awayTeamName, localTeamName]\n",
+      "Index: []\n",
+      "LAS PALMAS\n",
+      "MALLORCA\n",
+      "Empty DataFrame\n",
+      "Columns: [Season, Jornada, Line, awayTeamName, localTeamName]\n",
+      "Index: []\n",
+      "ATH.CLUB\n",
+      "R.MADRID\n",
+      "Empty DataFrame\n",
+      "Columns: [Season, Jornada, Line, awayTeamName, localTeamName]\n",
+      "Index: []\n",
+      "CELTA\n",
+      "OSASUNA\n",
+      "Empty DataFrame\n",
+      "Columns: [Season, Jornada, Line, awayTeamName, localTeamName]\n",
+      "Index: []\n",
+      "VILLARREAL\n",
+      "BETIS\n",
+      "Empty DataFrame\n",
+      "Columns: [Season, Jornada, Line, awayTeamName, localTeamName]\n",
+      "Index: []\n",
+      "GETAFE\n",
+      "BARCELONA\n",
+      "Empty DataFrame\n",
+      "Columns: [Season, Jornada, Line, awayTeamName, localTeamName]\n",
+      "Index: []\n",
+      "CÁDIZ\n",
+      "ALAVÉS\n",
+      "Empty DataFrame\n",
+      "Columns: [Season, Jornada, Line, awayTeamName, localTeamName]\n",
+      "Index: []\n",
+      "RACING S.\n",
+      "EIBAR\n",
+      "Empty DataFrame\n",
+      "Columns: [Season, Jornada, Line, awayTeamName, localTeamName]\n",
+      "Index: []\n",
+      "ELCHE\n",
+      "R.FERROL\n",
+      "Empty DataFrame\n",
+      "Columns: [Season, Jornada, Line, awayTeamName, localTeamName]\n",
+      "Index: []\n",
+      "BURGOS\n",
+      "HUESCA\n",
+      "Empty DataFrame\n",
+      "Columns: [Season, Jornada, Line, awayTeamName, localTeamName]\n",
+      "Index: []\n",
+      "ALBACETE\n",
+      "ESPANYOL\n",
+      "Empty DataFrame\n",
+      "Columns: [Season, Jornada, Line, awayTeamName, localTeamName]\n",
+      "Index: []\n",
+      "CARTAGENA\n",
+      "ELDENSE\n",
+      "Empty DataFrame\n",
+      "Columns: [Season, Jornada, Line, awayTeamName, localTeamName]\n",
+      "Index: []\n",
+      "LEGANÉS\n",
+      "ANDORRA FC\n",
+      "Empty DataFrame\n",
+      "Columns: [Season, Jornada, Line, awayTeamName, localTeamName]\n",
+      "Index: []\n",
+      "MIRANDÉS\n",
+      "ALCORCÓN\n",
+      "Empty DataFrame\n",
+      "Columns: [Season, Jornada, Line, awayTeamName, localTeamName]\n",
+      "Index: []\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-20-11208e10d0e5>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;31m#driver = webdriver.Chrome(ChromeDriverManager(version='114.0.5735.90').install())\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;31m#driver = webdriver.Chrome('chromedriver')\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 7\u001b[1;33m \u001b[0mdriver\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mwebdriver\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mChrome\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mservice\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mChromeService\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mChromeDriverManager\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mversion\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'114.0.5735.90'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0minstall\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      8\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdriver\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'ChromeService' is not defined"
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[12], line 22\u001b[0m\n\u001b[0;32m     19\u001b[0m select \u001b[38;5;241m=\u001b[39m Select(driver\u001b[38;5;241m.\u001b[39mfind_element(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mid\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mu-hidden-scrollbar\u001b[39m\u001b[38;5;124m'\u001b[39m))\n\u001b[0;32m     20\u001b[0m select\u001b[38;5;241m.\u001b[39mselect_by_value(\u001b[38;5;28mstr\u001b[39m(jornada))\n\u001b[1;32m---> 22\u001b[0m time\u001b[38;5;241m.\u001b[39msleep(randint(\u001b[38;5;241m5\u001b[39m,\u001b[38;5;241m10\u001b[39m))  \n\u001b[0;32m     24\u001b[0m cajas \u001b[38;5;241m=\u001b[39m driver\u001b[38;5;241m.\u001b[39mfind_elements(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mxpath\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m//div[@class=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mc-caja_base m-no-fixed-size\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m]\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     25\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m caja \u001b[38;5;129;01min\u001b[39;00m cajas:\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
    "source": [
-    "#URL = \"https://www.betexplorer.com/soccer/spain/laliga2-2020-2021/results/\"\n",
     "URL = \"https://www.eduardolosilla.es/quiniela/ayudas/porcentajes\"\n",
     "\n",
-    "# download chromedriver last verion and put in this folder\n",
-    "#driver = webdriver.Chrome(ChromeDriverManager(version='114.0.5735.90').install())\n",
-    "#driver = webdriver.Chrome('chromedriver')\n",
-    "driver = webdriver.Chrome(service=ChromeService(ChromeDriverManager(version='114.0.5735.90').install()))\n",
+    "options = webdriver.ChromeOptions()\n",
+    "service = ChromeService(executable_path='chromedriver.exe')\n",
+    "driver = webdriver.Chrome(service=service, options=options)\n",
     "\n",
     "print(driver)\n",
     "\n",
@@ -77,15 +163,12 @@
     "    jornada += 1\n",
     "    \n",
     "    # Click on the \"jornada\" tab\n",
-    "    select = Select(driver.find_element_by_id('u-hidden-scrollbar'))\n",
-    "    # select by visible text\n",
-    "    # select.select_by_visible_text('Banana')\n",
-    "    # select by value \n",
-    "    select.select_by_value(str(jornada) )\n",
+    "    select = Select(driver.find_element(\"id\",'u-hidden-scrollbar'))\n",
+    "    select.select_by_value(str(jornada))\n",
     "    \n",
     "    time.sleep(randint(5,10))  \n",
     "    \n",
-    "    cajas = driver.find_elements_by_xpath(\"//div[@class='c-caja_base m-no-fixed-size']\")\n",
+    "    cajas = driver.find_elements(\"xpath\",\"//div[@class='c-caja_base m-no-fixed-size']\")\n",
     "    for caja in cajas:\n",
     "        cajaTable = caja.text.split('\\n')\n",
     "        #print(caja.text)\n",
@@ -110,6 +193,8 @@
     "            df[\"awayTeamName\"] = awayTeamName_\n",
     "            df[\"localTeamName\"] = localTeamName_\n",
     "            \n",
+    "            print(df)\n",
+    "            \n",
     "            if not firstTime:\n",
     "                df_ant = pd.concat([df, df_ant], ignore_index=True)\n",
     "            else: \n",
@@ -117,13 +202,13 @@
     "                firstTime = False\n",
     "            \n",
     "            ii += 5\n",
-    "            print(df_ant)\n",
+    "            #print(df_ant)\n",
     "    #print(df_ant)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +250,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,7 +269,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -198,7 +283,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.12"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
