--- a/Atrapar porcentajes quiniela.ipynb
+++ b/Atrapar porcentajes quiniela.ipynb
@@ -52,163 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<selenium.webdriver.chrome.webdriver.WebDriver (session=\"43d6dcb6b95649ea81b86d77ce9fe837\")>\n",
-      "R.SOCIEDAD\n",
-      "GIRONA\n",
-      "Empty DataFrame\n",
-      "Columns: [Season, Jornada, Line, awayTeamName, localTeamName]\n",
-      "Index: []\n",
-      "LAS PALMAS\n",
-      "MALLORCA\n",
-      "Empty DataFrame\n",
-      "Columns: [Season, Jornada, Line, awayTeamName, localTeamName]\n",
-      "Index: []\n",
-      "ATH.CLUB\n",
-      "R.MADRID\n",
-      "Empty DataFrame\n",
-      "Columns: [Season, Jornada, Line, awayTeamName, localTeamName]\n",
-      "Index: []\n",
-      "CELTA\n",
-      "OSASUNA\n",
-      "Empty DataFrame\n",
-      "Columns: [Season, Jornada, Line, awayTeamName, localTeamName]\n",
-      "Index: []\n",
-      "VILLARREAL\n",
-      "BETIS\n",
-      "Empty DataFrame\n",
-      "Columns: [Season, Jornada, Line, awayTeamName, localTeamName]\n",
-      "Index: []\n",
-      "GETAFE\n",
-      "BARCELONA\n",
-      "Empty DataFrame\n",
-      "Columns: [Season, Jornada, Line, awayTeamName, localTeamName]\n",
-      "Index: []\n",
-      "CÁDIZ\n",
-      "ALAVÉS\n",
-      "Empty DataFrame\n",
-      "Columns: [Season, Jornada, Line, awayTeamName, localTeamName]\n",
-      "Index: []\n",
-      "RACING S.\n",
-      "EIBAR\n",
-      "Empty DataFrame\n",
-      "Columns: [Season, Jornada, Line, awayTeamName, localTeamName]\n",
-      "Index: []\n",
-      "ELCHE\n",
-      "R.FERROL\n",
-      "Empty DataFrame\n",
-      "Columns: [Season, Jornada, Line, awayTeamName, localTeamName]\n",
-      "Index: []\n",
-      "BURGOS\n",
-      "HUESCA\n",
-      "Empty DataFrame\n",
-      "Columns: [Season, Jornada, Line, awayTeamName, localTeamName]\n",
-      "Index: []\n",
-      "ALBACETE\n",
-      "ESPANYOL\n",
-      "Empty DataFrame\n",
-      "Columns: [Season, Jornada, Line, awayTeamName, localTeamName]\n",
-      "Index: []\n",
-      "CARTAGENA\n",
-      "ELDENSE\n",
-      "Empty DataFrame\n",
-      "Columns: [Season, Jornada, Line, awayTeamName, localTeamName]\n",
-      "Index: []\n",
-      "LEGANÉS\n",
-      "ANDORRA FC\n",
-      "Empty DataFrame\n",
-      "Columns: [Season, Jornada, Line, awayTeamName, localTeamName]\n",
-      "Index: []\n",
-      "MIRANDÉS\n",
-      "ALCORCÓN\n",
-      "Empty DataFrame\n",
-      "Columns: [Season, Jornada, Line, awayTeamName, localTeamName]\n",
-      "Index: []\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[12], line 22\u001b[0m\n\u001b[0;32m     19\u001b[0m select \u001b[38;5;241m=\u001b[39m Select(driver\u001b[38;5;241m.\u001b[39mfind_element(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mid\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mu-hidden-scrollbar\u001b[39m\u001b[38;5;124m'\u001b[39m))\n\u001b[0;32m     20\u001b[0m select\u001b[38;5;241m.\u001b[39mselect_by_value(\u001b[38;5;28mstr\u001b[39m(jornada))\n\u001b[1;32m---> 22\u001b[0m time\u001b[38;5;241m.\u001b[39msleep(randint(\u001b[38;5;241m5\u001b[39m,\u001b[38;5;241m10\u001b[39m))  \n\u001b[0;32m     24\u001b[0m cajas \u001b[38;5;241m=\u001b[39m driver\u001b[38;5;241m.\u001b[39mfind_elements(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mxpath\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m//div[@class=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mc-caja_base m-no-fixed-size\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m]\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     25\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m caja \u001b[38;5;129;01min\u001b[39;00m cajas:\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
-   "source": [
-    "URL = \"https://www.eduardolosilla.es/quiniela/ayudas/porcentajes\"\n",
-    "\n",
-    "options = webdriver.ChromeOptions()\n",
-    "service = ChromeService(executable_path='chromedriver.exe')\n",
-    "driver = webdriver.Chrome(service=service, options=options)\n",
-    "\n",
-    "print(driver)\n",
-    "\n",
-    "driver.get(URL)\n",
-    "\n",
-    "firstTime = True\n",
-    "\n",
-    "jornada = -1\n",
-    "# for every \"jornada\"\n",
-    "while jornada < 58:\n",
-    "    jornada += 1\n",
-    "    \n",
-    "    # Click on the \"jornada\" tab\n",
-    "    select = Select(driver.find_element(\"id\",'u-hidden-scrollbar'))\n",
-    "    select.select_by_value(str(jornada))\n",
-    "    \n",
-    "    time.sleep(randint(5,10))  \n",
-    "    \n",
-    "    cajas = driver.find_elements(\"xpath\",\"//div[@class='c-caja_base m-no-fixed-size']\")\n",
-    "    for caja in cajas:\n",
-    "        cajaTable = caja.text.split('\\n')\n",
-    "        #print(caja.text)\n",
-    "        #print(cajaTable)\n",
-    "\n",
-    "        ii = 0\n",
-    "        while(ii < (5*14)):\n",
-    "            \n",
-    "            line_ = cajaTable[ii]\n",
-    "            #print(line_)\n",
-    "            saux = (cajaTable[ii+1]).split(' - ')\n",
-    "            localTeamName_ = saux[0]\n",
-    "            awayTeamName_ = saux[1]\n",
-    "            print(localTeamName_)\n",
-    "            print(awayTeamName_)\n",
-    "            \n",
-    "            df = pd.DataFrame(columns=['Season', 'Jornada', 'Line', 'awayTeamName', 'localTeamName'])\n",
-    "            \n",
-    "            df[\"Season\"] = \"2021/22\"\n",
-    "            df[\"Jornada\"] = jornada\n",
-    "            df[\"Line\"] = line_\n",
-    "            df[\"awayTeamName\"] = awayTeamName_\n",
-    "            df[\"localTeamName\"] = localTeamName_\n",
-    "            \n",
-    "            print(df)\n",
-    "            \n",
-    "            if not firstTime:\n",
-    "                df_ant = pd.concat([df, df_ant], ignore_index=True)\n",
-    "            else: \n",
-    "                df_ant = df\n",
-    "                firstTime = False\n",
-    "            \n",
-    "            ii += 5\n",
-    "            #print(df_ant)\n",
-    "    #print(df_ant)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -240,17 +84,333 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>23/24</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>GIRONA</td>\n",
+       "      <td>R.SOCIEDAD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>23/24</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>MALLORCA</td>\n",
+       "      <td>LAS PALMAS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>23/24</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>R.MADRID</td>\n",
+       "      <td>ATH.CLUB</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>23/24</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>OSASUNA</td>\n",
+       "      <td>CELTA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>23/24</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>BETIS</td>\n",
+       "      <td>VILLARREAL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>289</th>\n",
+       "      <td>23/24</td>\n",
+       "      <td>21</td>\n",
+       "      <td>10</td>\n",
+       "      <td>RACING S.</td>\n",
+       "      <td>LEVANTE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>290</th>\n",
+       "      <td>23/24</td>\n",
+       "      <td>21</td>\n",
+       "      <td>11</td>\n",
+       "      <td>REP.IRLANDA</td>\n",
+       "      <td>PAÍSES BAJOS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>291</th>\n",
+       "      <td>23/24</td>\n",
+       "      <td>21</td>\n",
+       "      <td>12</td>\n",
+       "      <td>CROACIA</td>\n",
+       "      <td>LETONIA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>292</th>\n",
+       "      <td>23/24</td>\n",
+       "      <td>21</td>\n",
+       "      <td>13</td>\n",
+       "      <td>ISLANDIA</td>\n",
+       "      <td>PORTUGAL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>293</th>\n",
+       "      <td>23/24</td>\n",
+       "      <td>21</td>\n",
+       "      <td>14</td>\n",
+       "      <td>NORUEGA</td>\n",
+       "      <td>ESCOCIA</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>294 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [Season, Jornada, Line, awayTeamName, localTeamName]\n",
-       "Index: []"
+       "    Season  Jornada Line awayTeamName localTeamName\n",
+       "0    23/24        1    1       GIRONA    R.SOCIEDAD\n",
+       "1    23/24        1    2     MALLORCA    LAS PALMAS\n",
+       "2    23/24        1    3     R.MADRID      ATH.CLUB\n",
+       "3    23/24        1    4      OSASUNA         CELTA\n",
+       "4    23/24        1    5        BETIS    VILLARREAL\n",
+       "..     ...      ...  ...          ...           ...\n",
+       "289  23/24       21   10    RACING S.       LEVANTE\n",
+       "290  23/24       21   11  REP.IRLANDA  PAÍSES BAJOS\n",
+       "291  23/24       21   12      CROACIA       LETONIA\n",
+       "292  23/24       21   13     ISLANDIA      PORTUGAL\n",
+       "293  23/24       21   14      NORUEGA       ESCOCIA\n",
+       "\n",
+       "[294 rows x 5 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "URL = \"https://www.eduardolosilla.es/quiniela/ayudas/porcentajes\"\n",
+    "\n",
+    "options = webdriver.ChromeOptions()\n",
+    "service = ChromeService(executable_path='chromedriver.exe')\n",
+    "driver = webdriver.Chrome(service=service, options=options)\n",
+    "#print(driver)\n",
+    "\n",
+    "driver.get(URL)\n",
+    "\n",
+    "\n",
+    "\n",
+    "NUM_TOTAL_JORNADAS = 20\n",
+    "MAIN_BOX_INCREMENT_BETWEEN_MATCHES = 5\n",
+    "NUM_MATCHES_IN_A_JORNADA = 14\n",
+    "\n",
+    "dfTotal = pd.DataFrame()\n",
+    "columns = columns=['Season', 'Jornada', 'Line', 'awayTeamName', 'localTeamName']\n",
+    "jornadaList = []\n",
+    "jornada = -1\n",
+    "# for every \"jornada\"\n",
+    "while jornada < NUM_TOTAL_JORNADAS:\n",
+    "    jornada += 1\n",
+    "    \n",
+    "    time.sleep(randint(2,3))  \n",
+    "    \n",
+    "    # Click on the \"jornada\" tab\n",
+    "    select = Select(driver.find_element(\"id\",'u-hidden-scrollbar'))\n",
+    "    select.select_by_value(str(jornada))\n",
+    "    \n",
+    "    time.sleep(randint(2,4))  \n",
+    "    \n",
+    "    boxes = driver.find_elements(\"xpath\",\"//div[@class='c-caja_base m-no-fixed-size']\")\n",
+    "    for mainBox in boxes:\n",
+    "        #print(mainBox.text)\n",
+    "        mainBoxTable = mainBox.text.split('\\n')\n",
+    "        #print(cajaTable)  # ['1', 'R.SOCIEDAD - GIRONA', '1', 'X', '2', '2', 'LAS PALMAS - MALLORCA', '1', 'X', '2', '3', 'ATH.CLUB - R.MADRID', '1', 'X', '2', . . .\n",
+    "\n",
+    "        jornadaBox = driver.find_elements(\"xpath\",\"//span[@class='c-selector-horizontal__content__text']\")\n",
+    "        #print(jornadaBox[0].text)\n",
+    "        saux = (jornadaBox[0].text).split(' - ')\n",
+    "        jornada_ = [int(s) for s in saux[0].split() if s.isdigit()][0]\n",
+    "        season_ = saux[1]\n",
+    "        \n",
+    "        \n",
+    "        ii = 0\n",
+    "        while(ii < (MAIN_BOX_INCREMENT_BETWEEN_MATCHES * NUM_MATCHES_IN_A_JORNADA)):\n",
+    "            \n",
+    "            line_ = mainBoxTable[ii]\n",
+    "            #print(line_)\n",
+    "            saux = (mainBoxTable[ii+1]).split(' - ')\n",
+    "            localTeamName_ = saux[0]\n",
+    "            awayTeamName_ = saux[1]\n",
+    "            #print(localTeamName_)\n",
+    "            #print(awayTeamName_)\n",
+    "\n",
+    "            row = [season_, jornada_, line_, awayTeamName_, localTeamName_]\n",
+    "            jornadaList.append(row)\n",
+    "  \n",
+    "            ii += MAIN_BOX_INCREMENT_BETWEEN_MATCHES\n",
+    "\n",
+    "        #print(jornadaList)\n",
+    "\n",
+    "df = pd.DataFrame(jornadaList, columns=columns)\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Season</th>\n",
+       "      <th>Jornada</th>\n",
+       "      <th>Line</th>\n",
+       "      <th>awayTeamName</th>\n",
+       "      <th>localTeamName</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>23/24</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>GIRONA</td>\n",
+       "      <td>R.SOCIEDAD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>23/24</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>MALLORCA</td>\n",
+       "      <td>LAS PALMAS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>23/24</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>R.MADRID</td>\n",
+       "      <td>ATH.CLUB</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>23/24</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>OSASUNA</td>\n",
+       "      <td>CELTA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>23/24</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>BETIS</td>\n",
+       "      <td>VILLARREAL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>289</th>\n",
+       "      <td>23/24</td>\n",
+       "      <td>21</td>\n",
+       "      <td>10</td>\n",
+       "      <td>RACING S.</td>\n",
+       "      <td>LEVANTE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>290</th>\n",
+       "      <td>23/24</td>\n",
+       "      <td>21</td>\n",
+       "      <td>11</td>\n",
+       "      <td>REP.IRLANDA</td>\n",
+       "      <td>PAÍSES BAJOS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>291</th>\n",
+       "      <td>23/24</td>\n",
+       "      <td>21</td>\n",
+       "      <td>12</td>\n",
+       "      <td>CROACIA</td>\n",
+       "      <td>LETONIA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>292</th>\n",
+       "      <td>23/24</td>\n",
+       "      <td>21</td>\n",
+       "      <td>13</td>\n",
+       "      <td>ISLANDIA</td>\n",
+       "      <td>PORTUGAL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>293</th>\n",
+       "      <td>23/24</td>\n",
+       "      <td>21</td>\n",
+       "      <td>14</td>\n",
+       "      <td>NORUEGA</td>\n",
+       "      <td>ESCOCIA</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>294 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Season  Jornada Line awayTeamName localTeamName\n",
+       "0    23/24        1    1       GIRONA    R.SOCIEDAD\n",
+       "1    23/24        1    2     MALLORCA    LAS PALMAS\n",
+       "2    23/24        1    3     R.MADRID      ATH.CLUB\n",
+       "3    23/24        1    4      OSASUNA         CELTA\n",
+       "4    23/24        1    5        BETIS    VILLARREAL\n",
+       "..     ...      ...  ...          ...           ...\n",
+       "289  23/24       21   10    RACING S.       LEVANTE\n",
+       "290  23/24       21   11  REP.IRLANDA  PAÍSES BAJOS\n",
+       "291  23/24       21   12      CROACIA       LETONIA\n",
+       "292  23/24       21   13     ISLANDIA      PORTUGAL\n",
+       "293  23/24       21   14      NORUEGA       ESCOCIA\n",
+       "\n",
+       "[294 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
