--- a/Atrapar porcentajes quiniela.ipynb
+++ b/Atrapar porcentajes quiniela.ipynb
@@ -52,151 +52,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Season</th>\n",
-       "      <th>Jornada</th>\n",
-       "      <th>Line</th>\n",
-       "      <th>awayTeamName</th>\n",
-       "      <th>localTeamName</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>23/24</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>GIRONA</td>\n",
-       "      <td>R.SOCIEDAD</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>23/24</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>MALLORCA</td>\n",
-       "      <td>LAS PALMAS</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>23/24</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>R.MADRID</td>\n",
-       "      <td>ATH.CLUB</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>23/24</td>\n",
-       "      <td>1</td>\n",
-       "      <td>4</td>\n",
-       "      <td>OSASUNA</td>\n",
-       "      <td>CELTA</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>23/24</td>\n",
-       "      <td>1</td>\n",
-       "      <td>5</td>\n",
-       "      <td>BETIS</td>\n",
-       "      <td>VILLARREAL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>289</th>\n",
-       "      <td>23/24</td>\n",
-       "      <td>21</td>\n",
-       "      <td>10</td>\n",
-       "      <td>RACING S.</td>\n",
-       "      <td>LEVANTE</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>290</th>\n",
-       "      <td>23/24</td>\n",
-       "      <td>21</td>\n",
-       "      <td>11</td>\n",
-       "      <td>REP.IRLANDA</td>\n",
-       "      <td>PAÍSES BAJOS</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>291</th>\n",
-       "      <td>23/24</td>\n",
-       "      <td>21</td>\n",
-       "      <td>12</td>\n",
-       "      <td>CROACIA</td>\n",
-       "      <td>LETONIA</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>292</th>\n",
-       "      <td>23/24</td>\n",
-       "      <td>21</td>\n",
-       "      <td>13</td>\n",
-       "      <td>ISLANDIA</td>\n",
-       "      <td>PORTUGAL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>293</th>\n",
-       "      <td>23/24</td>\n",
-       "      <td>21</td>\n",
-       "      <td>14</td>\n",
-       "      <td>NORUEGA</td>\n",
-       "      <td>ESCOCIA</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>294 rows × 5 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    Season  Jornada Line awayTeamName localTeamName\n",
-       "0    23/24        1    1       GIRONA    R.SOCIEDAD\n",
-       "1    23/24        1    2     MALLORCA    LAS PALMAS\n",
-       "2    23/24        1    3     R.MADRID      ATH.CLUB\n",
-       "3    23/24        1    4      OSASUNA         CELTA\n",
-       "4    23/24        1    5        BETIS    VILLARREAL\n",
-       "..     ...      ...  ...          ...           ...\n",
-       "289  23/24       21   10    RACING S.       LEVANTE\n",
-       "290  23/24       21   11  REP.IRLANDA  PAÍSES BAJOS\n",
-       "291  23/24       21   12      CROACIA       LETONIA\n",
-       "292  23/24       21   13     ISLANDIA      PORTUGAL\n",
-       "293  23/24       21   14      NORUEGA       ESCOCIA\n",
-       "\n",
-       "[294 rows x 5 columns]"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['23/24', 1, '1', 'GIRONA', 'R.SOCIEDAD', 'X'], ['23/24', 1, '2', 'MALLORCA', 'LAS PALMAS', 'X'], ['23/24', 1, '3', 'R.MADRID', 'ATH.CLUB', '2'], ['23/24', 1, '4', 'OSASUNA', 'CELTA', '2'], ['23/24', 1, '5', 'BETIS', 'VILLARREAL', '2'], ['23/24', 1, '6', 'BARCELONA', 'GETAFE', 'X'], ['23/24', 1, '7', 'ALAVÉS', 'CÁDIZ', '1'], ['23/24', 1, '8', 'EIBAR', 'RACING S.', '1'], ['23/24', 1, '9', 'R.FERROL', 'ELCHE', '2'], ['23/24', 1, '10', 'HUESCA', 'BURGOS', 'X'], ['23/24', 1, '11', 'ESPANYOL', 'ALBACETE', 'X'], ['23/24', 1, '12', 'ELDENSE', 'CARTAGENA', '2'], ['23/24', 1, '13', 'ANDORRA FC', 'LEGANÉS', '2'], ['23/24', 1, '14', 'ALCORCÓN', 'MIRANDÉS', '1']]\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[70], line 32\u001b[0m\n\u001b[0;32m     29\u001b[0m select \u001b[38;5;241m=\u001b[39m Select(driver\u001b[38;5;241m.\u001b[39mfind_element(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mid\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mu-hidden-scrollbar\u001b[39m\u001b[38;5;124m'\u001b[39m))\n\u001b[0;32m     30\u001b[0m select\u001b[38;5;241m.\u001b[39mselect_by_value(\u001b[38;5;28mstr\u001b[39m(jornada))\n\u001b[1;32m---> 32\u001b[0m time\u001b[38;5;241m.\u001b[39msleep(randint(\u001b[38;5;241m2\u001b[39m,\u001b[38;5;241m4\u001b[39m))  \n\u001b[0;32m     35\u001b[0m \u001b[38;5;66;03m#####################################\u001b[39;00m\n\u001b[0;32m     36\u001b[0m \u001b[38;5;66;03m# Find main Box\u001b[39;00m\n\u001b[0;32m     37\u001b[0m \u001b[38;5;66;03m#####################################    \u001b[39;00m\n\u001b[0;32m     38\u001b[0m mainBoxes \u001b[38;5;241m=\u001b[39m driver\u001b[38;5;241m.\u001b[39mfind_elements(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mxpath\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m//div[@class=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mc-caja_base m-no-fixed-size\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m]\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     ]
     }
    ],
    "source": [
@@ -216,7 +91,7 @@
     "NUM_MATCHES_IN_A_JORNADA = 14\n",
     "\n",
     "dfTotal = pd.DataFrame()\n",
-    "columns = columns=['Season', 'Jornada', 'Line', 'awayTeamName', 'localTeamName']\n",
+    "columns = columns=['Season', 'Jornada', 'Line', 'awayTeamName', 'localTeamName', 'Result']\n",
     "jornadaList = []\n",
     "jornada = -1\n",
     "# for every \"jornada\"\n",
@@ -225,14 +100,24 @@
     "    \n",
     "    time.sleep(randint(2,3))  \n",
     "    \n",
+    "    #####################################\n",
     "    # Click on the \"jornada\" tab\n",
+    "    #####################################\n",
     "    select = Select(driver.find_element(\"id\",'u-hidden-scrollbar'))\n",
     "    select.select_by_value(str(jornada))\n",
     "    \n",
     "    time.sleep(randint(2,4))  \n",
     "    \n",
-    "    boxes = driver.find_elements(\"xpath\",\"//div[@class='c-caja_base m-no-fixed-size']\")\n",
-    "    for mainBox in boxes:\n",
+    "    \n",
+    "    #####################################\n",
+    "    # Find main Box\n",
+    "    #####################################    \n",
+    "    mainBoxes = driver.find_elements(\"xpath\",\"//div[@class='c-caja_base m-no-fixed-size']\")\n",
+    "    \n",
+    "    results = driver.find_elements(\"xpath\",\"//button[@class='u-pronostico m-signo']\")\n",
+    "    #print(results[0].text)\n",
+    "    \n",
+    "    for mainBox in mainBoxes:\n",
     "        #print(mainBox.text)\n",
     "        mainBoxTable = mainBox.text.split('\\n')\n",
     "        #print(cajaTable)  # ['1', 'R.SOCIEDAD - GIRONA', '1', 'X', '2', '2', 'LAS PALMAS - MALLORCA', '1', 'X', '2', '3', 'ATH.CLUB - R.MADRID', '1', 'X', '2', . . .\n",
@@ -255,7 +140,8 @@
     "            #print(localTeamName_)\n",
     "            #print(awayTeamName_)\n",
     "\n",
-    "            row = [season_, jornada_, line_, awayTeamName_, localTeamName_]\n",
+    "            row = [season_, jornada_, line_, awayTeamName_, localTeamName_, \n",
+    "                   results[int(ii/MAIN_BOX_INCREMENT_BETWEEN_MATCHES)].text]\n",
     "            jornadaList.append(row)\n",
     "  \n",
     "            ii += MAIN_BOX_INCREMENT_BETWEEN_MATCHES\n",
@@ -268,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +296,7 @@
        "[294 rows x 5 columns]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
